# number

./: DEPLOYMENT.md  run-backend.sh  run-frontend.sh
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  create_messages_table.py  pyproject.toml  render.yaml  start.sh
backend/app/: auth.py  database.py  files.py  main.py  messages.py  users.py  websocket.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_files.py  test_health.py  test_main.py  test_messages.py  test_users.py  test_websocket.py
frontend/: WIDGET_README.md  index.html  package-lock.json  package.json  tailwind.widget.config.js  tsconfig.app.json  vite.standalone.config.ts  vite.widget.config.ts
frontend/src/: App.tsx  index.css  main.tsx  widget-standalone.tsx  widget.css  widget.test.ts  widget.ts
frontend/src/components/: Chat.test.tsx  Chat.tsx  ChatWidget.test.tsx  ChatWidget.tsx  FormField.tsx  LoginForm.test.tsx  LoginForm.tsx  MessageInput.test.tsx  MessageInput.tsx  MessageList.test.tsx  MessageList.tsx  Navigation.test.tsx  RegisterForm.test.tsx  RegisterForm.tsx  TypingIndicator.test.tsx  TypingIndicator.tsx  UserList.test.tsx  UserList.tsx  theme-toggle.tsx
frontend/src/components/ui/: input.tsx
frontend/src/lib/: api.test.ts  api.ts  useWebSocket.test.ts  useWebSocket.ts
